# mcp-synchro

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  README.md  WORK.md  build.sh  install.sh  publish.sh  pyproject.toml  test.sh
.omc/: project-memory.json
issues/: 101.md  102.md
src/mcp_synchro/: __init__.py  __main__.py  _version.py  agents.json  agents.py  cli.py  config.py  models.py  readers.py  sync.py  writers.py
tests/: test_all.py
