[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcp-synchro"
dynamic = ["version"]
description = "Synchronize MCP server configurations across 20+ AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Adam Twardoch", email = "adam+github@twardoch.com" }]
keywords = ["mcp", "model-context-protocol", "claude", "cursor", "codex", "gemini", "ai", "sync", "configuration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "fire>=0.7.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
mcp-synchro = "mcp_synchro.cli:main"

[project.urls]
Homepage = "https://github.com/twardoch/mcp-synchro"
Repository = "https://github.com/twardoch/mcp-synchro"
Issues = "https://github.com/twardoch/mcp-synchro/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mcp_synchro/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_synchro"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest -xvs {args:tests}"
lint = "ruff check --fix . && ruff format ."
typecheck = "mypy src/"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
exclude = ["src/mcp_synchro/_version.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
